radware/alexey/deployment-bear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100
      maxUnavailable: 0
  replicas: 5
  selector:
    matchLabels:
      type: animals
  template:
    metadata:
      labels:
        app: bear
        type: animals
    spec:
      containers:
      - name: bear-app
        image: supergiantkir/animals:bear
        resources:
          limits:
            cpu: "1000"
            memory: "500Mi"
          requests:
            cpu: "500"
            memory: "250Mi"        
        ports:
        - containerPort: 8080
