radware/alexey/deployment-moose.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moose
      type: animals
  template:
    metadata:
      labels:
        app: moose
        type: animals
    spec:
      containers:
      - name: moose-app
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 8080
