radware/alexey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
spec:
  selector:
    app: music-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
